change about me text

--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -14,7 +14,7 @@
       <div class="port-text" id="port-weather-text">
         <p>Weather App: Get instant weather updates with my Angular Weather App, <br> powered by open-meteo and ipgeolocation API get, providing real-time weather for any location.
       </div>
-      <a href="https://app-weather-exam.netlify.app/" target="_blank">
+      <a href="https://weather-location-application.netlify.app/" target="_blank">
         <img class="weather-img" src="assets/img/weather.png" id="port-weather-img">
       </a>
     </div>
