--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -121,7 +121,7 @@ img {
   }
   &:hover {
     transform: scale(1.2);
-    transition: all 0.5s ease;
+    transition: all 0.5s ease-in-out;
   }
 }
 
