--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,11 +1,11 @@
 <section class="port-section" id="portfolio">
   <h2 class="port-title">Featured projects</h2>
     <div class="port-container">
-      <a href="/" target="_blank">
+      <a href="https://jersey-shop.netlify.app/" target="_blank">
         <img class="quiz-img" src="assets/img/jerseyShop.png" id="port-img">
       </a>
       <div class="port-text" id="port-text">
-        <p>Jersey Shop: A WebShop with Angular and Firebase tailored for businesses.</p>
+        <p>IN PROGRESS: Jersey Shop: A WebShop with Angular and Firebase tailored for businesses.</p>
     </div>
      
     </div>
