header link direction

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
       </div>
     </div>
     <div class="header-link">
-      <a href=""><b>Home</b></a>
+      <a href="#home"><b>Home</b></a>
       <a href="#aboutme"><b>About Me</b></a>
       <a href="#skills"><b>Skills</b></a>
       <a href="#portfolio"><b>Portfolio</b></a>
