--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -5,7 +5,7 @@
         <img class="quiz-img" src="assets/img/jerseyShop.png" id="port-img">
       </a>
       <div class="port-text" id="port-text">
-        <p>IN PROGRESS: Jersey Shop: A WebShop with Angular and Firebase tailored for businesses.</p>
+        <p>WORK IN PROGRESS: Jersey Shop: A WebShop with Angular and Firebase tailored for businesses.</p>
     </div>
      
     </div>
