change styles css

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* Light Mode */
 html {
   scroll-behavior: smooth;
+  width: 100%;
 }
 body {
   background-color: #ffffff;
@@ -49,4 +50,5 @@ h4 {
   font-family: 'Quicksand', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
 }
+
 
