--- a/src/app/components/portfolio/portfolio.component.scss
+++ b/src/app/components/portfolio/portfolio.component.scss
@@ -59,6 +59,7 @@
   height: 300px;
   @media  screen and (max-width: 800px) {
     width: 100%;
+    height: auto;
   }
 }
 
@@ -66,11 +67,13 @@
   height: 330px;
   @media  screen and (max-width: 800px) {
     width: 100%;
+    height: auto;
   }
 }
 .quiz-img {
   height: 300px;
   @media  screen and (max-width: 800px) {
     width: 100%;
+    height: auto;
   }
 }
