--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -268,10 +268,10 @@ img {
       justify-content: center;
       flex-direction: column;
       width: 100%;
-      a {
+      b {
         color: white;
-        font-size: 20px;
-        padding: 10px;
+        font-size: 30px;
+        padding: 20px;
         &:hover {
           text-decoration: underline;
         }
