--- a/src/app/components/portfolio/portfolio.component.scss
+++ b/src/app/components/portfolio/portfolio.component.scss
@@ -5,6 +5,9 @@
   display: flex;
   justify-content: center;
   padding-bottom: 60px;
+  @media screen and (max-width: 800px) {
+    padding-bottom: 0;
+  }
 }
 
 .port-section {
@@ -40,8 +43,7 @@
 }
 
 .port-text {
-  padding: 0 30px 0 30px;
-  padding-top: 8%;
+  padding: 120px 30px 0 30px;
   @media screen and (max-width: 800px) {
     padding: 0;
   }
