--- a/src/app/components/headline/headline.component.html
+++ b/src/app/components/headline/headline.component.html
@@ -5,5 +5,5 @@
     </div>
 </section>
 <div>
-    <p id="content">I write about building profitable web applications as a developer and lead as a future Scrum Master</p>
+    <p id="content">I write about building profitable web applications as a developer</p>
 </div>
