some text, changes images and add new project

--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -7,15 +7,13 @@
             <img src="assets/img/meAtWork.png">
         </div>
         <div class="slogan" id="textArea">
-            <p>" I'm an enthusiastic software developer and scrum master who wants to learn more "</p>
+            <p>" I'm an enthusiastic software developer who wants to learn more "</p>
         </div>
     </div>
     <div class="textArea" id="textBox">
         <div class="aboutMe-Text">
           <p>
-            Allow me to introduce myself - I am Max, a dedicated professional in the field of software development. My journey began in November 2021 when I started my career at Startup Werk. Over the years, I have honed my expertise in crafting top-notch web applications and collaborating harmoniously with our esteemed cooperation partners. In addition to my role as a software developer, I have also taken on the responsibilities of a Scrum Master since April 2023. This new role has allowed me to lead the expansion and optimization of processes within my team, ensuring that we operate at the pinnacle of efficiency and productivity. I take immense pride in my ability to tackle complex challenges, adapt to dynamic environments, and foster a cooperative work culture.
-          </p>
-         </div>
+            I am Max, a frontend developer with a passion for engaging user interfaces. With a focus on the Angular framework, I design and implement user-friendly web applications that ensure smooth interaction. Leveraging my expertise in HTML, CSS, and TypeScript, the core elements of Angular, I bring innovative designs to life. Additionally, I continuously optimize the user experience to ensure a high-quality and appealing website. My goal is to develop outstanding frontend solutions through creative solutions and technical precision, utilizing the Angular framework.         </div>
     </div>
 </div>
 
