--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -5,26 +5,26 @@
         <img class="quiz-img" src="assets/img/jerseyShop.png" id="port-img">
       </a>
       <div class="port-text" id="port-text">
-        <p>WORK IN PROGRESS: Jersey Shop: A WebShop with Angular and Firebase tailored for businesses.</p>
+        <p>Jersey Shop: A WebShop with Angular and Firebase tailored for businesses.</p>
     </div>
      
     </div>
 
     <div class="port-container">
       <div class="port-text" id="port-weather-text">
-        <p>Weather App: Get instant weather updates with my Angular Weather App, <br> powered by open-meteo and ipgeolocation API get, providing real-time weather for any location.
+        <p>Disney Plus Clone: The service is built around content from Disney's <br> main entertainment studios and film and television library developed with Angular and Firebase.
       </div>
-      <a href="https://weather-location-application.netlify.app/" target="_blank">
-        <img class="weather-img" src="assets/img/weather.png" id="port-weather-img">
+      <a href="https://disneyplus-clone-app-dev.netlify.app/" target="_blank">
+        <img class="weather-img" src="assets/img/disneyPlus.png" id="port-weather-img">
       </a>
     </div>
 
     <div class="port-container">
-      <a href="http://maximilian-kraemer.developerakademie.com/ElPollo/index.html" target="_blank">
-        <img class="loco-img" src="assets/img/elPollo.png" id="port-img">
+      <a href="https://weather-location-application.netlify.app/" target="_blank">
+        <img class="weather-img" src="assets/img/weather.png" id="port-weather-img">
       </a>
       <div class="port-text" id="port-text">
-        <p>El Pollo Loco: is an exciting JavaScript game where you beat a flying chicken, <br> navigate through obstacles, collect points, and conquer the highscore leaderboard. <br> Immerse yourself in this fast-paced chicken adventure!</p>
+        <p>Weather App: Get instant weather updates with my Angular Weather App, <br> powered by open-meteo and ipgeolocation API get, providing real-time weather for any location.</p>
       </div>
   </div>
  
