--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -15,7 +15,7 @@
         <p>Disney Plus Clone: The service is built around content from Disney's <br> main entertainment studios and film and television library developed with Angular and Firebase.
       </div>
       <a href="https://disneyplus-clone-app-dev.netlify.app/" target="_blank">
-        <img class="weather-img" src="assets/img/disneyPlus.png" id="port-weather-img">
+        <img class="disney-img" src="assets/img/disneyPlus.png" id="port-weather-img">
       </a>
     </div>
 
